# GPXVideoMaker

./: .gitignore  LICENSE  NOTICE  README.md  gpx_handler.py  librarian.py  main.py  overlays.py  pave_tiles.py  pyproject.toml  requirements.txt  settings.json  test.py  utils.py  video_writer.py
debug/: 20260118_QingShanLake.gpx
